spring-petclinic/k8s/41-traefik-middlw.yml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect301
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
