spring-petclinic/k8s/41-traefik-deploy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: traefik-ingress
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress
        name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - image: traefik:v2.2
#      - image: traefik:v1.7
        name: traefik
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 4443
          hostPort: 4443
        - name: admin
          containerPort: 8080
          hostPort: 8080
        args:
          - --api
          - --api.insecure
          - --api.dashboard=true
          - --providers.kubernetescrd=true
          - --providers.kubernetesingress=true
          - --accesslog
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:4443
          - --entrypoints.traefik.Address=:8080

          # permanent redirecting of all requests on http (80) to https (443)
          - --entrypoints.web.http.redirections.entryPoint.scheme=https
          - --entrypoints.web.http.redirections.entrypoint.permanent=true
          - --entrypoints.websecure.address=:4443

#          - --entrypoints.web.http.redirections.entryPoint.to=websecure
          - --entrypoints.websecure.http.tls.certResolver=default

          - --providers.kubernetescrd
          - --certificatesresolvers.default.acme.tlschallenge
          - --certificatesresolvers.default.acme.email=john.connor@.airbcom
          - --certificatesresolvers.default.acme.storage=acme.json

          # Once you get things working, you should remove that whole line altogether.
          - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
