spring-petclinic/k8s/40-traefik-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    k8s-app: traefik-ingress
  ports:
  - name: admin
    port: 8080
    targetPort: 8080
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 4443
